@@ -1,0 +1,60 @@
+[interface]
+classification = file / conversion
+
+[parameters]
+;; Path to the directory where GBrowse configuration files are stored
+$;GBROWSE_CONF_DIRECTORY$; = 
+;; Path to the GBrowse master configuration file (GBrowse.conf)
+$;GBROWSE_MASTER_CONF$; = 
+;; A template file that will be used by the component to generate the GBrowse database configuration.
+$;GBROWSE_CONF_TEMPLATE$; =
+;; The source organism whose sequence data will be loaded into GBrowse
+$;ORGANISM$; = 
+;; Hostname for MySQL server where sequence data will be loaded
+$;HOSTNAME$; =
+;; Desired name for database where sequence data will be loaded
+$;DB_NAME$; = 
+$;USERNAME$; =
+$;PASSWORD$; =
+
+[input]
+$;INPUT_FILE_LIST$; = 
+$;INPUT_FILE$; = 
+$;INPUT_DIRECTORY$; = 
+;; the following is only used when iterating over an INPUT_DIRECTORY
+$;INPUT_EXTENSION$; = gff3
+;; Optional SAM file that can be mapped against the sequence data loaded into GBrowse
+$;SAM_FILE$; =
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+
+[component]
+$;COMPONENT_NAME$; = gff3_to_gbrowse
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+$;SKIP_WF_COMMAND$;=
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = $Name$
+$;RELEASE_TAG$; = $Name$
+$;REVISION$;            = $Revision: 6089 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; = 
+$;COMPONENT_XML$; = 
+$;PIPELINE_XML$; = 
+$;PIPELINEID$; = 
+
+[include]
+$;PROJECT_CONFIG$;=
